[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volt-llm-client"
version = "0.1.2"
description = "A lightweight client for local LLM APIs like Ollama or OpenWebUI"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "volt-logger>=0.1.0"
]
keywords = ["logging", "structured", "volt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest", "requests", "pytest-mock"]

[project.urls]
"Homepage" = "https://github.com/stuarttempleton/volt-llm-client"
"Repository" = "https://github.com/stuarttempleton/volt-llm-client"
"Bug Tracker" = "https://github.com/stuarttempleton/volt-llm-client/issues"